# stella-lorraine

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  create_validation_visualizations.py  deny.toml  docker-compose.yml  masunda-navigator.code-workspace  pyproject.toml  rust-toolchain.toml  rustfmt.toml
crates/tempus/: Cargo.toml  build_and_test.ps1
crates/tempus/src/: error.rs  kernel.rs  lhc.rs  lib.rs  partition.rs  selection.rs  trigger.rs  typecheck.rs  vahera.rs
observatory/: COMPLETE_PHYSICAL_CASCADE_VALIDATION.md  COMPUTATIONAL_PHARMACOLOGY_INTEGRATION.md  EXPERIMENTAL_VALIDATION_MODULES.md  HOW_TO_PRESENT_THIS_WORK.md  NEW_EXPERIMENTAL_APPROACH.md  PIVOT_SUMMARY.md  README.md  REFRAMING.md  RESULTS_EVIDENCE_SUMMARY.md  REVOLUTIONARY_BREAKTHROUGH.md  TANGIBLE_VALIDATION_EXPERIMENTS.md  TROUBLESHOOTING.md  comprehensive_wave_simulation_demo.py  fix_environment.py  install.py  minimal_demo.py  pyproject.toml  quick_start.py  requirements.txt
observatory/publication/: MAXWELL_DEMON_SECTIONS_COMPLETE.md  PAPERS_READY_FOR_COMPILATION.md  QUICK_START_MAXWELL_DEMON.md
observatory/publication/ensemble-transporters/: README_PAPER.md  compile.bat  compile.sh  ensemble-membrane-transporter-maxwell-demons.aux  ensemble-membrane-transporter-maxwell-demons.bbl  ensemble-membrane-transporter-maxwell-demons.blg  ensemble-membrane-transporter-maxwell-demons.tex  figures.tex  references.bib
observatory/publication/faster/: figures.tex  molecular-spectroscopy-categorical-propagation.aux  molecular-spectroscopy-categorical-propagation.bbl  molecular-spectroscopy-categorical-propagation.blg  molecular-spectroscopy-categorical-propagation.tex  molecular-spectroscopy-categorical-propagation.toc  references.bib
observatory/publication/gibbs-paradox/: categorical-resolution-gibbs-paradox.aux  categorical-resolution-gibbs-paradox.bbl  categorical-resolution-gibbs-paradox.blg  categorical-resolution-gibbs-paradox.tex  references.bib
observatory/publication/interferometry/: NEW_IDEAS_SUMMARY.md  PAPER_COMPLETE_STATUS.md  REFERENCES_UPDATED.md  VIRTUAL_CONSTELLATION_SUMMARY.md  VOLUMETRIC_TOMOGRAPHY_COMPLETE.md  figures.tex  references.bib  ultra-high-resolution-interferometry.aux  ultra-high-resolution-interferometry.bbl  ultra-high-resolution-interferometry.blg  ultra-high-resolution-interferometry.tex  ultra-high-resolution-interferometry.toc
observatory/publication/largest-number/: largest-number.tex
observatory/publication/molecular-structure-prediction/: PAPER_COMPLETE.md  README_PAPER.md  compile.bat  compile.sh  figures.tex  molecular-structure-prediction.aux  molecular-structure-prediction.blg  molecular-structure-prediction.tex  molecular-structure-prediction.toc  references.bib
observatory/publication/observation-boundary/: COMPLETE_FRAMEWORK.md  KEY_INSIGHTS.md  PROFOUND_REALIZATION.md  README.md  THE_SYMMETRY.md  THE_TRUE_ZERO.md  compile.bat  compile.sh  properties-of-observation-boundary.aux  properties-of-observation-boundary.bbl  properties-of-observation-boundary.blg  properties-of-observation-boundary.tex  properties-of-observation-boundary.toc  references.bib
observatory/publication/philosophy/: heartbeat-gas-bmd-synthesis.tex  heartbeat-phase-synchronization.tex
observatory/publication/pixel-maxwell-demon/: categorical-pixel-maxwell-demon.aux  categorical-pixel-maxwell-demon.blg  categorical-pixel-maxwell-demon.tex  categorical-pixel-maxwell-demon.toc  figures.tex  references.bib
observatory/publication/protein-folding/: PAPER_SUMMARY.md  README_PAPER.md  STRUCTURE_GUIDE.md  compile.bat  compile.sh  figures.tex  groel-phase-locking-resonance-chamber.aux  groel-phase-locking-resonance-chamber.bbl  groel-phase-locking-resonance-chamber.blg  groel-phase-locking-resonance-chamber.tex  groel-phase-locking-resonance-chamber.toc  references.bib
observatory/publication/teleportation/: zero-delay-travel.tex
observatory/publication/thermometry/: HARMONIC_THERMOMETRY_BREAKTHROUGH.md  HARMONIC_THERMOMETRY_READY.md  NEW_IDEAS_FOR_PAPER.md  PAPER_SECTION_ROADMAP.md  PAPER_UPDATES_COMPLETE.md  REFERENCES_AND_SECTIONS_COMPLETE.md  SECTIONS_UPDATED.md  categorical-quantum-thermometry.aux  categorical-quantum-thermometry.bbl  categorical-quantum-thermometry.blg  categorical-quantum-thermometry.tex  categorical-quantum-thermometry.toc  figures.tex  references.bib
observatory/results/: categorical_ftl_results_20251114_195641.json  categorical_ftl_results_20251114_200608.json  categorical_spacetime_mapping_20251115_042238.json  led_spectroscopy_results.json  triangular_teleportation_20251115_044348.json  triangular_teleportation_20251115_052027.json
observatory/results/bmd_equivalence/: bmd_equivalence_20251105_120820.json  bmd_equivalence_20251105_122812.json  bmd_equivalence_20251105_124315.json
observatory/results/complete_cascade/: cascade_summary_20251015_092603.json
observatory/results/gap_fixes/: strategic_disagreement_20251013_043210.json
observatory/results/gps_precision/: coros_cleaned_20251013_000747.csv  garmin_cleaned_20251013_000747.csv  heartbeat_gas_bmd_unified_20251013_053416.json  heartbeat_gas_bmd_unified_20251015_002328.json  heartbeat_perception_quantum_20251013_053355.json  real_watch_comparison_20251013_010051.json  (+6 more)
observatory/src/: COHERENCE_FIX_SUMMARY.md  COMPLETE_TESTING_FRAMEWORK.md  COMPLETE_VALIDATION_FRAMEWORK.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_NEEDED.md  CRITICAL_FIXES_STATUS.md  EXPERIMENT_TEMPLATE.md  GRAPH_BREAKTHROUGH.md  IMPLEMENTATION_README.md  MODULE_TESTING_README.md  QUICKSTART.md  QUICK_REFERENCE.md  SCIENTIFIC_VALIDATION_GUIDE.md  TESTING_GUIDE.md  VALIDATION_CHECKLIST.md  VALIDATION_OUTPUTS.md  VALIDATION_README.md  VALIDATION_SUMMARY.md  __init__.py  check_imports.py  diagnose_experiments.py  experiment.py  experiment_config.py  results-alignent.md  run_all_demonstrations.py  run_all_validations.py  run_validation_suite.py  test_all_modules.py  test_single_experiment.py
(+1904 files in other folders)
