[package]
name = "masunda-temporal-coordinate-navigator"
version = "0.1.0"
edition = "2021"
description = "The Masunda Temporal Coordinate Navigator - the most precise clock ever conceived, achieving 10^-30 to 10^-50 second precision"
authors = ["Kundai Sachikonye <kundai@masunda.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kundai/masunda-temporal-coordinate-navigator"
keywords = ["temporal", "precision", "clock", "quantum", "memorial"]
categories = ["science", "mathematics", "hardware-support"]

[[bin]]
name = "masunda-navigator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2"
num-complex = "0.4"
nalgebra = "0.32"
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.4"
once_cell = "1.19"
lazy_static = "1.4"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.0"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
rstest = "0.18"

[features]
default = ["high-precision"]
high-precision = []
experimental = []
benchmarks = ["criterion"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[[bench]]
name = "precision_benchmarks"
harness = false
required-features = ["benchmarks"]

[package.metadata.docs.rs]
features = ["experimental"]
rustdoc-args = ["--cfg", "docsrs"] 