[package]
name = "masunda-temporal-navigator"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <research@s-entropy.org>"]
description = "Ultra-precision temporal coordinate navigation and window combination advisory service for S-entropy systems"
license = "MIT"
repository = "https://github.com/kundai/masunda-temporal-navigator"
keywords = ["temporal", "precision", "s-entropy", "navigation", "quantum"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
dashmap = "5.0"
once_cell = "1.0"
parking_lot = "0.12"
nalgebra = "0.32"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"

# HTTP/API server capabilities
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Configuration management
config = "0.14"
toml = "0.8"

# Mathematical and scientific computing
num-complex = "0.4"
statrs = "0.16"
approx = "0.5"

# Serialization formats
bincode = "1.3"
rmp-serde = "1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.0"
pretty_assertions = "1.0"

# Benchmarks temporarily disabled
# [[bench]]
# name = "s_constant_benchmarks"
# harness = false

# [[bench]]
# name = "window_combination_benchmarks"
# harness = false

# [[bench]]
# name = "temporal_precision_benchmarks"
# harness = false

[features]
default = ["temporal-precision", "s-entropy-integration", "window-advisory"]
temporal-precision = []
s-entropy-integration = []
window-advisory = []
impossible-windows = []
memorial-validation = []
ultra-precision = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
