[package]
name = "tempus"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <research@s-entropy.org>"]
description = "Tempus trigger kernel: partition-physics-grounded real-time event selection"
license = "MIT"
keywords = ["lhc", "trigger", "partition", "physics", "tempus"]

[dependencies]
catcount     = { path = "../../trans_planckian/catcount" }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "1.0"
dashmap      = "5.0"
parking_lot  = "0.12"
tracing      = "0.1"

[dev-dependencies]
pretty_assertions = "1.0"
proptest          = "1.0"
